--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mysql://admin:senai2021!@senai-overflow.cmjipweccszy.us-east-1.rds.amazonaws.com:3306/senai_overflow
+DATABASE_URL=mysql://root:bcd127@localhost:3306/senai_overflow
 
 JWT_SECRET=810414a724fbc7fade9bbf0a72f49c02
 
