--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "expo": "^40.0.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "jsonwebtoken": "^8.5.1",
